editei o titulo da minha pagina

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
     <h1>MS</h1>
     <p class="lead">Eu ensino Programação</p>
     <p>
-      Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do
-      Ensino Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript.
-      Veja os projetos que já desenvolvi!
+      Sou o amorim gosto de apostas e analisar graficos !
     </p>
     <p>Minhas habilidades</p>
     <div>
