--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
               Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial
             </h5>
             <p class="card-text">
-              Este projeto é um jogo interativo baseado em navegador que explora o impacto e as
-              implicações da Inteligência Artificial (IA) na sociedade, permitindo que as pessoas
-              jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o futuro da IA.
+              Este é meu projeto aonde vou fazer um site do meu idolo .
             </p>
             <button
               type="button"
