editei a segunda pagina do meu site

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
           />
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">
-              Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial
+              nessa aba voce verá conquistas do mc kevin
+              
             </h5>
             <p class="card-text">
               Este é meu projeto aonde vou fazer um site do meu idolo .
